--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -1,3 +1,19 @@
 .App {
   text-align: center;
+  background-color: rgb(118, 133, 234);
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  margin: 10px;
+  padding: 10px;
+  width: 100%;
+  display: flex;
+
+}
+
+.List-header {
+  border: 2px solid black;
+  border-radius: 5px;
+  width: 95%;
+  background-color: rgb(176, 79, 224);
+  color: rgb(17, 62, 60);
+  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
